--- a/deploy/docker/Database/Dockerfile
+++ b/deploy/docker/Database/Dockerfile
@@ -1,7 +1,9 @@
-FROM mongo
+FROM mongo:3.4
 
-MAINTAINER juliens@microsoft.com
+MAINTAINER marta.valiente1@alu.uclm.es
 
-COPY drop/* /tmp/
+#/data/db/ será el volumen usado para persistencia de sesión 
+COPY drop/* usr/local/data/db/
 
+#CMD es lo mismo que ENTRYPOINT pero con otro formato
 CMD ["mongod", "--smallfiles", "--rest"]
