--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,24 +37,24 @@ jobs:
           
         - name: dockerizar el front y el backend
           run: |
-             cp src/clients/build/libs/".war deploy/docker/clients/drop scopiar el resultado del build para la nueva imagen
+             cp src/clients/build/libs/*.war deploy/docker/clients/drop #copiar el resultado del build para la nueva imagen
              docker build -t p2gps/web deploy/docker/Clients #p2gps o el nombre q tenga tu repo 
-             cp src/Backend/OrderService/build/libs/ordering deploy/docker/order/drop #copiar el resultado del build para la nueva imagen 
+             cp src/Backend/OrderService/build/libs/ordering* deploy/docker/Order/drop #copiar el resultado del build para la nueva imagen 
              docker build -t p2gps/order deploy/docker/Order
 
       #### SUBIR IMAGENES A DOCKERHUB ####
 
         - name: Login to DockerHub
-          uses: docker/login-action@vi
+          uses: docker/login-action@v1
           with: 
-           username: ${{ secrets.DOCKERHUB USERNAME}} crear la variable de entorno en settings --> Secrets 
-           password: s{{ secrets.DOCKERHUB_PASSWORD}} crear la variable de entorno en settings --> Secrets 
+           username: ${{ secrets.DOCKERHUB USERNAME }} # crear la variable de entorno en Settings --> Secrets 
+           password: s{{ secrets.DOCKERHUB_PASSWORD }} # crear la variable de entorno en Settings --> Secrets 
         - name: Etiquetar con formato DockerHub
           run: | 
-           docker tag p2gps/web s{{ secrets.DOCKERHUB_USERNAME}}/p2gps: web 
-           docker tag p2gps/order ${{ secrets.DOCKERHUB_USERNAME}/p2gps:order 
+           docker tag p2gps/web s{{ secrets.DOCKERHUB_USERNAME }}/p2gps: web 
+           docker tag p2gps/order ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
         - name: Push a DockerHub
           run: | 
-             docker push ${[ secrets.DOCKERHUB USERNAME}}/p2gps:order 
-             docker push ${{ secrets.DOCKERHUB USERNAME ))/p2gps: web
+             docker push ${[ secrets.DOCKERHUB USERNAME }}/p2gps:order 
+             docker push ${{ secrets.DOCKERHUB USERNAME }}/p2gps:web
           
