--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,7 +47,7 @@ jobs:
         - name: Login to DockerHub
           uses: docker/login-action@v1
           with: 
-           username: ${{ secrets.DOCKERHUB USERNAME }} # crear la variable de entorno en Settings --> Secrets 
+           username: ${{ secrets.DOCKERHUB_USERNAME }} # crear la variable de entorno en Settings --> Secrets 
            password: s{{ secrets.DOCKERHUB_PASSWORD }} # crear la variable de entorno en Settings --> Secrets 
         - name: Etiquetar con formato DockerHub
           run: | 
@@ -55,6 +55,6 @@ jobs:
            docker tag p2gps/order ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
         - name: Push a DockerHub
           run: | 
-             docker push ${[ secrets.DOCKERHUB USERNAME }}/p2gps:order 
-             docker push ${{ secrets.DOCKERHUB USERNAME }}/p2gps:web
+             docker push ${[ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
+             docker push ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:web
           
