--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
           
         - name: dockerizar el front y el backend
           run: |
-             cp src/clients/build/libs/*.war deploy/docker/clients/drop #copiar el resultado del build para la nueva imagen
+             cp src/Clients/build/libs/*.war deploy/docker/clients/drop #copiar el resultado del build para la nueva imagen
              docker build -t p2gps/web deploy/docker/Clients #p2gps o el nombre q tenga tu repo 
              cp src/Backend/OrderService/build/libs/ordering* deploy/docker/Order/drop #copiar el resultado del build para la nueva imagen 
              docker build -t p2gps/order deploy/docker/Order
