--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,13 +48,13 @@ jobs:
           uses: docker/login-action@v1
           with: 
            username: ${{ secrets.DOCKERHUB_USERNAME }} # crear la variable de entorno en Settings --> Secrets 
-           password: s{{ secrets.DOCKERHUB_PASSWORD }} # crear la variable de entorno en Settings --> Secrets 
+           password: ${{ secrets.DOCKERHUB_PASSWORD }} # crear la variable de entorno en Settings --> Secrets 
         - name: Etiquetar con formato DockerHub
           run: | 
-           docker tag p2gps/web s{{ secrets.DOCKERHUB_USERNAME }}/p2gps: web 
+           docker tag p2gps/web ${{ secrets.DOCKERHUB_USERNAME }}/p2gps: web 
            docker tag p2gps/order ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
         - name: Push a DockerHub
           run: | 
-             docker push ${[ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
+             docker push ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
              docker push ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:web
           
